# checklist

./: .coverage  .dockerignore  .gitattributes  .gitignore  CONTEXT.md  Dockerfile  GEMINI.md  README.md  TODO  docker-compose.yaml  main.py  nginx.conf  prepare_build.bat  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml  tests.yml
checklistapp/: .env.dist  conftest.py  manage.py
checklistapp/accounts/: admin.py  forms.py  models.py  services.py  urls.py  views.py
checklistapp/accounts/migrations/: 0001_initial.py  0002_userprojectpermissions.py
checklistapp/accounts/tests/: test_forms.py  test_models.py  test_views.py
checklistapp/checklist/: models.py  services.py  urls.py  views.py
checklistapp/checklist/migrations/: 0001_initial.py  0002_alter_projectstep_description.py
checklistapp/checklist/tests/: test_models.py  test_views.py
checklistapp/checklistapp/: asgi.py  settings.py  urls.py  wsgi.py
checklistapp/checklists/: models.py  urls.py  views.py
checklistapp/checklists/migrations/: 0001_initial.py
checklistapp/common/: views.py
checklistapp/core/: b64_field.py  exceptions.py  forms.py  middleware.py  mixins.py  tests.py  utils.py
checklistapp/core/templatetags/: custom_filters.py
checklistapp/diagram/: urls.py  views.py
checklistapp/home/: models.py  urls.py  views.py
checklistapp/home/migrations/: 0001_initial.py
checklistapp/inventory/: forms.py  models.py  services.py  urls.py  views.py
checklistapp/inventory/migrations/: 0001_initial.py  0002_alter_inventoryfield_file_value.py  0003_alter_inventoryfield_number_value.py  0004_rename_name_projectinventory_title.py  0005_alter_projectinventory_description.py
checklistapp/inventory/tests/: test_forms.py  test_models.py  test_views.py
checklistapp/projects/: apps.py  forms.py  models.py  services.py  signals.py  urls.py  views.py
checklistapp/projects/migrations/: 0001_initial.py  0002_project_expected_completion_date.py  0002_projecttask_manually_created.py  0003_taskcomment.py  0004_remove_project_owner.py  0005_remove_projecttask_comment_and_more.py  0006_remove_models.py
checklistapp/projects/templatetags/: project_filters.py
checklistapp/projects/tests/: test_forms.py  test_models.py  test_services.py  test_views.py
checklistapp/static/css/: base.css  diagram.css  forms.css  jsplumbtoolkit.min.css  project_detail.css
checklistapp/static/js/: base.js  comment.js  diagram.js  htmx_actions.js  jsplumb.browser-ui.umd.min.js
checklistapp/templates/: base.html  base_two_columns.html  footer.html  homepage.html  messages.html  navbar.html
checklistapp/templates/accounts/: login.html  profile.html  register.html
checklistapp/templates/checklist/: checklist_detail.html
checklistapp/templates/diagram/: diagram.html  diagram_page.html
checklistapp/templates/inventory/: inventory_detail.html
checklistapp/templates/projects/: project_create.html  project_detail.html  project_edit.html  project_list.html  project_setup.html  project_setup_V2.html
checklistapp/templates_management/: admin.py  apps.py  models.py  tests.py
checklistapp/templates_management/migrations/: 0001_initial.py  0002_remove_templatefield_unique_field_name_order_per_template_and_more.py  0002_tasktemplate_help_url_tasktemplate_info_text_and_more.py  (+5 more)
poc/: test.html  test_v1.html
(+46 files in other folders)
