[project]
name = "checklist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cookiecutter>=2.6.0",
    "crispy-tailwind>=1.0.3",
    "django>=5.2.8",
    "django-environ>=0.12.0",
    "django-fernet-encrypted-fields>=0.3.1",
    "django-htmx>=1.27.0",
    "django-tailwind[cookiecutter,honcho,reload]>=4.2.0",
    "django-widget-tweaks>=1.5.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.11",
]


[dependency-groups]
dev = [
    "beautifulsoup4>=4.14.3",
    "django-debug-toolbar>=6.1.0",
    "freezegun>=1.5.5",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
    "ruff>=0.14.6",
]

[tool.ruff]
# Liste des codes d'erreur à activer (checkers)
# E: pycodestyle (erreurs)
# W: pycodestyle (avertissements)
# F: Pyflakes (erreurs générales de code)
# I: isort (reordering des imports)
# N: pep8-naming (conventions de nommage)
# UP: pyupgrade (améliorations suggérées)
lint.select = ["E", "W", "F", "I", "N", "UP"]

# Liste des codes d'erreur à ignorer (pour ne pas être trop strict au début)
lint.ignore = [
    "E501", # Ligne trop longue (souvent géré par les formateurs comme Black)
    "N801", # Nom de classe ne respectant pas PascalCase
    "N802", # Nom de fonction/méthode ne respectant pas snake_case
    "N806", # Nom de variable non constant pour un attribut de classe
    "N807", # Nom de variable non snake_case pour une déclaration with
]

# Exclure des fichiers ou dossiers
exclude = [".git", "__pycache__", "build", "dist", "venv", "templates/**"]

# Définir la longueur de ligne (doit correspondre à celle de votre formateur, ex: Black)
line-length = 128

# Activer la correction automatique par défaut
fix = true

### Paramètres spécifiques pour isort (I) ###
[tool.ruff.lint.isort]
# Réordonner les imports pour qu'ils respectent le style 'pyproject' (équivalent à Black)
# Par défaut, isort est déjà très bien intégré avec Ruff
# Si vous utilisez Black, il n'y a généralement pas besoin d'options supplémentaires ici.
known-first-party = ["checklistapp"] # Remplacez par le nom de votre package


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "checklistapp.settings"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py", "tests.py"]
addopts = "--cov=. --cov-report=xml --cov-report=term --cov-report=term:skip-covered --junitxml=pytest.xml"


[tool.coverage.run]
# On définit ici les fichiers à ne pas analyser du tout
omit = [
    "*/tests/*",
    "*/tests.py",
    "*/test_*.py",
    "*/*test*.py",
    "*/migrations/*",
    "*/asgi.py",
    "*/wsgi.py",
    "manage.py",
    "*/settings.py",
    "*/apps.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
